--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,14 @@
       <h2>
         <%= link_to article.title, article %>
       </h2>
-      <p><%= article.text %></p>
+      <%= link_to "Edit", edit_article_path(article) %>
+      <%= link_to "Show", article_path(article) %>
+      <%= 
+        link_to "Destroy",
+          article_path(article),
+          method: :delete,
+          data: {confirm: "Are your sure to delete?"}  
+      %>
     </li>
   <% end %>
 </ul>
