--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,6 @@
+<h2><%= @article.title %></h2>
+<hr>
 <p>
-  <strong>Title: </strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
   <%= @article.text %>
 </p>
 
